Updated docker-compose to build student web service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,14 @@
 version: '3'
 services:
+    contacts:
+        build:
+            context: contacts
+            dockerfile: Dockerfile
+        ports:
+            - "8080:80"
+        container_name: contacts
     video-rental:
         build: .
         ports:
             - "5000:80"
-        container_name: video-rental-api
+        container_name: video-rental
